name:                bitly-servant
version:             0.1.0.0
synopsis:            Servant client for Bitly API
description:         Please see README.md
homepage:            https://github.com/nmohoric/bitly-servant#readme
license:             MIT
license-file:        LICENSE
author:              Nick Mohoric
maintainer:          nick.mohoric@gmail.com
copyright:           2016 Nick Mohoric 
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -fwarn-unused-imports
  exposed-modules:     Web.Bitly
                     , Web.Bitly.Expand
                     , Web.Bitly.Info
                     , Web.Bitly.Lookup 
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring     == 0.10.*
                     , either         == 4.4.*
                     , servant        == 0.4.*
                     , servant-client == 0.4.*
                     , text           == 1.2.*
                     , time           == 1.4.*
  default-language:    Haskell2010

test-suite bitly-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bitly-servant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nmohoric/bitly-servant
